cmake_minimum_required(VERSION 3.21)
Project(PS_Framework)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(co_task co_task.hpp)
add_library(ps_core PSCore.cpp PSCore.hpp)
add_library(linearfunctions ps_interfaces.hpp LinearFunction.cpp LinearFunction.hpp)
#add_library(ps_framework co_task ps_framework.hpp ps_framework.cpp ps_interfaces.hpp PSCore.cpp PSCore.hpp)
add_library(schedular co_task schedular.cpp schedular.hpp)
add_library(ps_quicksort co_task schedular ps_quicksort.hpp ps_quicksort.cpp)
#set_target_properties(ps_framework PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(ps_core PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(linearfunctions PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(schedular PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(co_task PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(ps_quicksort PROPERTIES LINKER_LANGUAGE CXX)
