cmake_minimum_required(VERSION 3.13)
Project(PS_Framework)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(co_task co_task.hpp)
add_library(ps_core PSCore.hpp)
add_library(linearfunctions ps_interfaces.hpp LinearFunction.hpp LinearFunction.cpp)
add_library(schedular co_task schedular.hpp)
add_library(Scheduler co_task Scheduler.hpp)
add_library(comparisonResolver Scheduler co_task ComparisonResolver.hpp)
#add_library(imp_scheduler co_task improved_scheduler.hpp)
#add_library(threadpool co_task ThreadPool.hpp ThreadPool.cpp)
add_library(ps_quicksort co_task schedular ps_quicksort.hpp)
add_library(multischedular ThreadPool.cpp ThreadPool.hpp MultiTSchedular.hpp)
#add_library(multischedular MultiTSchedular.hpp)
set_target_properties(ps_core PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(Scheduler PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(comparisonResolver PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(linearfunctions PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(schedular PROPERTIES LINKER_LANGUAGE CXX)
#set_target_properties(imp_scheduler PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(co_task PROPERTIES LINKER_LANGUAGE CXX)
#set_target_properties(threadpool PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(multischedular PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(ps_quicksort PROPERTIES LINKER_LANGUAGE CXX)
#target_link_libraries(multischedular threadpool)
