cmake_minimum_required(VERSION 3.21)
Project(MedianOfLines)
# specify the C++ standard
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
include_directories(../include)
link_directories(../include)
add_subdirectory(../include include)
link_libraries(ps_framework)
link_libraries(ps_quicksort)
add_executable(median_of_lines median_of_lines.cpp)
target_link_libraries(ps_framework co_task)
target_link_libraries(ps_quicksort co_task ps_framework)
target_link_libraries(median_of_lines ps_quicksort ps_framework)
